# python-direnv

./: .gitignore  README.md  direnv.py  manifest.scm  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml
src/: direnv.py
src/direnv/: __init__.py  ipython.py  main.py
tests/: conftest.py  test_ipython.py  test_main.py  test_zip_imports.py
