[project]
name = "python-direnv"
version = "0.2.1"
authors = [
  { name="Nicolas Graves", email="ngraves@ngraves.fr" },
]
description = "Loads environment variables from a direnv .envrc file."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/nicolas-graves/python-direnv"
Issues = "https://github.com/nicolas-graves/python-direnv/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/direnv"]
